# SPHinXsys-1

./: CMakeLists.txt
SPHINXsys/src/shared/meshes/: cell_linked_list.h
heart/: CMakeLists.txt  binary_writer.h  generate_data.sh  main.cpp  models.h  observers.h  stimulus.h
python/: setup.py
python/sphtools/: cnn.py  copy.py  process_data.py  utils.py  visualize.py
python/sphtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/test/: cnn.ipynb  test.ipynb
python/test/wandb/: latest-run
python/test/wandb/run-20220309_184632-3apa01ko/: run-3apa01ko.wandb
python/test/wandb/run-20220309_184704-so6ruusi/: run-so6ruusi.wandb
python/test/wandb/run-20220309_184857-2j349a9h/: run-2j349a9h.wandb
python/test/wandb/run-20220309_184953-1nwhmtb2/: run-1nwhmtb2.wandb
python/test/wandb/run-20220309_192857-27mq5tzo/: run-27mq5tzo.wandb
python/test/wandb/run-20220309_195614-2bksn6u4/: run-2bksn6u4.wandb
python/test/wandb/run-20220309_234128-o7it0ldr/: run-o7it0ldr.wandb
python/test/wandb/run-20220309_234538-1y6biwrd/: run-1y6biwrd.wandb
python/test/wandb/run-20220309_235017-2yczt940/: run-2yczt940.wandb
python/test/wandb/run-20220309_235128-24zskxdm/: run-24zskxdm.wandb
python/test/wandb/run-20220309_235151-25i291qi/: run-25i291qi.wandb
python/test/wandb/run-20220309_235327-36lj250c/: run-36lj250c.wandb
python/test/wandb/run-20220309_235455-1mlbj0n7/: run-1mlbj0n7.wandb
python/test/wandb/run-20220309_235822-122sc8su/: run-122sc8su.wandb
python/test/wandb/run-20220309_235951-1t5c6jut/: run-1t5c6jut.wandb
python/test/wandb/run-20220310_105612-32knwad7/: run-32knwad7.wandb
python/test/wandb/run-20220310_111503-3sxp5y0l/: run-3sxp5y0l.wandb
python/test/wandb/run-20220310_111604-1quo81qe/: run-1quo81qe.wandb
python/test/wandb/run-20220310_111921-1mx5xyit/: run-1mx5xyit.wandb
python/test/wandb/run-20220310_112256-1nydoheu/: run-1nydoheu.wandb
python/test/wandb/run-20220310_112347-2xkn1asf/: run-2xkn1asf.wandb
python/test/wandb/run-20220310_112423-10sudg58/: run-10sudg58.wandb
python/test/wandb/run-20220310_113052-78naxx9z/: run-78naxx9z.wandb
python/test/wandb/run-20220310_113332-2vsjbxcv/: run-2vsjbxcv.wandb
python/test/wandb/run-20220310_113539-1ytm8kc8/: run-1ytm8kc8.wandb
python/test/wandb/run-20220310_113614-2z5o6ojk/: run-2z5o6ojk.wandb
python/test/wandb/run-20220310_113848-doj2wjzt/: run-doj2wjzt.wandb
tests/3d_examples/test_3d_heart_electromechanics/: excitation-contraction.cpp
(+260 files in other folders)
